<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.josesanjuanelo.proyectomovil.RegistroPersona">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/lblIdRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.04"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/apellido"
                    android:inputType="textPersonName"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtUsuarioRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/usuario"
                    android:inputType="textPersonName"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtContraseniaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/contrasenia"
                    android:inputType="textPassword"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/edad"
                    android:inputType="number"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView58"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:fontFamily="casual"
                    android:text="@string/sexo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.04"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/r1Masculino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:fontFamily="casual"
                        android:text="@string/sexo1"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/r2Femenino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/sexo2"
                        android:textStyle="bold" />
                </RadioGroup>

                <Button
                    android:id="@+id/button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:onClick="registrar"
                    android:text="@string/registrar"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
