<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/MostrarUsuario"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMostrarRegistro"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.84"
                android:onClick="registrar"
                android:text="@string/registrar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView44"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:text="@string/listarUsuario"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMostrarListado"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ListarUsuarioLogin"
                android:text="@string/mostrar" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>