<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.josesanjuanelo.proyectomovil.Guatape">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                app:srcCompat="@drawable/guatape" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.63"
                    android:fontFamily="casual"
                    android:text="@string/guatape"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="29dp"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="181dp"
                    android:layout_marginLeft="91dp"
                    android:layout_marginStart="91dp"
                    android:onClick="mostrar_mapa"
                    app:srcCompat="@drawable/ubicacion"
                    android:layout_weight="0.13" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.29"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/guatapeintro"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:typeface="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="61dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/hoteles"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold"
                    android:layout_weight="0.76" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="241dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/gua"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/comida"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_weight="0.06" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="57dp"
                    android:layout_height="62dp"
                    android:layout_weight="0.52"
                    android:fontFamily="casual"
                    android:text="@string/comidaT"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="67dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.03"
                    android:fontFamily="casual"
                    android:text="@string/quehacer"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="261dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/queh"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView55"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/quehacer"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView54"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/hacervalledupar"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/puntuaeste"
                    android:textAlignment="viewStart"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:verticalScrollbarPosition="right">

                    <RadioButton
                        android:id="@+id/r5Popayan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="5" />

                    <RadioButton
                        android:id="@+id/r4Popayan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.54"
                        android:text="4" />

                    <RadioButton
                        android:id="@+id/r3Popayan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="3" />

                    <RadioButton
                        android:id="@+id/r2Popayan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="2" />

                    <RadioButton
                        android:id="@+id/r1Popayan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.65"
                        android:text="1" />
                </RadioGroup>

                <Button
                    android:id="@+id/btnEnviarPopayan"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="puntuar"
                    android:text="@string/enviar" />

                <TextView
                    android:id="@+id/lblPuntuacionPopayan"
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ayuda"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbxAbrigoPopayan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/abrigo" />

                    <CheckBox
                        android:id="@+id/cbxBloqueadorPopayan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bloquador" />

                    <CheckBox
                        android:id="@+id/cbxKitPopayan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/kitM" />

                    <CheckBox
                        android:id="@+id/cbxRepelentePopayan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/repelente" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblAbrigoPopayan"
                        android:layout_width="82dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/lblBloqueadorPopayan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/lblKitPopayan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/lblRepelentePopayan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnEnviar"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="ayuda"
                    android:text="@string/enviar" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
